conversations controller with writing new message

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,7 @@
 @import "pages/studies"; /** TODO: later load only for mods and admins */
 @import "pages/blog";
 @import "pages/profile";
-@import "pages/messages";
+@import "pages/conversations";
 @import "pages/group_summary";
 
 /** BlogModule Assets **/
