--- a/app/assets/stylesheets/elements/arrows.scss
+++ b/app/assets/stylesheets/elements/arrows.scss
@@ -100,6 +100,8 @@ $arrow-width: 13px;
     @include box-shadow(2px 0px 6px lighten($color-shadow, 20%));
     padding: 0 8px;
     margin-left: 20px;
+    min-height: 40px;
+    padding-top: 5px;
     position: relative;
     width: 540px;
   }
