--- a/app/views/messages/_show.html.erb
+++ b/app/views/messages/_show.html.erb
@@ -1,5 +1,5 @@
 <div class="message clfx <%= message.author == current_user ? 'left' : 'right' %>">
-  <%= display_user message.author, :size => :medium, :text => l(message.created_at) %>
+  <%= display_user message.author, :size => :medium, :text => l(message.created_at.to_date) %>
   <div class="text arrow-<%= message.author == current_user ? 'left' : 'right' %>">
     <%= simple_format emoticons message.content.html_safe %>
   </div>
