added click area to conversations list

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -102,6 +102,10 @@ strong, .bold {
   clear: left;
 }
 
+[data-clickarea] {
+  cursor: pointer;
+}
+
 /** Emoticons
  =================================================== */
 .emo {
