noindex,nofollow for now

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title><%= yield :title %></title>
+  <meta name="robots" content="noindex,nofollow">
   <%= stylesheet_link_tag "application" %>
   <%= yield :stylesheets %>
   <script>
