first design for conversation list

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,7 +4,9 @@
 @import "common";
 @import "design";
 
+
 /** Elements **/
+@import "elements/info";
 @import "elements/actions";
 @import "elements/tables";
 @import "elements/forms";
