--- a/app/views/studies/show.html.erb
+++ b/app/views/studies/show.html.erb
@@ -143,7 +143,7 @@
           <% end %>
         </ul>
       <% end %>
-      <%= link_to t(group.topics.empty? ? '.topics.add' : '.topics.change'), new_group_topic_path(group), :class => 'action actions-topic-add' %>
+      <%= link_to t(group.topics.empty? ? '.topics.add' : '.topics.change'), new_group_topic_path(group), :class => 'action actions-topic-add' unless @study.has_ended? %>
     </div>
     <p class="clr"></p>
   </section>
