Added description to topics and allowed to create them

--- a/app/assets/stylesheets/elements/forms.scss
+++ b/app/assets/stylesheets/elements/forms.scss
@@ -58,6 +58,10 @@ textarea.fullsize {
   min-height: 150px;
 }
 
+textarea.description {
+  height: 80px;
+}
+
 input.placeholder {
   color: $color-hint;
 }
