--- a/app/assets/stylesheets/pages/blog.scss
+++ b/app/assets/stylesheets/pages/blog.scss
@@ -8,20 +8,24 @@
     padding-top: 20px;
   }
 
-  .topic {
+  .callout {
     margin-bottom: 15px;
-
-    .date {
-      color: #999;
-      display: none;
-      font-size: 14px;
-      position: absolute;
-      right: 6px;
-      top: 6px;
-    }
   }
 
-  .topic:hover .date {
+  .topic {
+    padding: 4px 0;
+  }
+
+  .date {
+    color: #999;
+    display: none;
+    font-size: 14px;
+    position: absolute;
+    right: 6px;
+    top: 6px;
+  }
+
+  .callout:hover .date {
     display: block;
   }
 
