--- a/app/assets/stylesheets/design.scss
+++ b/app/assets/stylesheets/design.scss
@@ -23,6 +23,7 @@ body {
   border-bottom: 1px solid #bbb;
   @include box-shadow(0px 2px 5px $color-shadow);
   color: $color-accent;
+  height: 35px;
   padding: 4px 0;
   text-align: right;
   width: 100%;
